# nn_zero_to_hero

./: .gitignore  README.md
gpt-2-repro/: fineweb.py  hellaswag.py  play.ipynb  train_gpt2.py
gptFromScratch/: bigram.py  gpt-dev.ipynb
makemore/makemore++/: CMakeLists.txt  main.cpp
makemore/makemore++/include/: makemore.h
makemore/makemore++/src/: makemore.cpp
makemore/notebooks/: makemore_from_scratch_mendax.ipynb  makemore_part_2_mendax.ipynb  makemore_part_3_mendax.ipynb  makemore_part_4_mendax.ipynb  makemore_part_5_mendax.ipynb
micrograd/micrograd++/: CMakeLists.txt  main.cpp
micrograd/micrograd++/include/: draw_dot.h  nn.h  value.h
micrograd/notebooks/: micrograd_from_scratch_mendax.ipynb
tokenizer/notebooks/: tokenizer_mendax.ipynb
